--- a/ToeOSCCore/ToeOSCCore.csproj
+++ b/ToeOSCCore/ToeOSCCore.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LucHeart.CoreOSC" Version="1.5.0" />
+    <PackageReference Include="LucHeart.CoreOSC" Version="1.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SlimeImuProtocol\SlimeImuProtocol.csproj" />
   </ItemGroup>
 
 </Project>
